# seacan

./: .gitignore  Cargo.toml  LICENSE  env.sh  prepare.sh  run-dev-container.sh
seacan-backend/: Cargo.toml
seacan-backend/src/: config.rs  constants.rs  log.rs  main.rs
