[package]
name = "seacan-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
file-rotate = "0.8.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
yaml = "0.3.0"
